--- a/src/comicagg/templates/admin/custom_func.html
+++ b/src/comicagg/templates/admin/custom_func.html
@@ -1,7 +1,7 @@
 {% extends 'admin/base_site.html' %}
-{% load i18n %}
+{% load i18n static %}
 {% block extrastyle %}
-  <link rel="stylesheet" type="text/css" href="{% load adminmedia %}{% admin_media_prefix %}css/dashboard.css" />
+  {{ block.super }}
   <style>
 pre {
 	border:1px dashed gray;
