--- a/src/comicagg/templates/accounts/password_reset_form.html
+++ b/src/comicagg/templates/accounts/password_reset_form.html
@@ -8,11 +8,11 @@
   <br/>
   <form action="{% url 'accounts:password_reset' %}" method="post">{% csrf_token %}
     <table>
-      <tr {% if form.data.errors %}class="error_tr"{% endif %}>
+      <tr {% if form.username_or_password.errors %}class="error_tr"{% endif %}>
         <td><label>{% trans 'Your username or email'%}</label></td>
-        <td>{{ form.data }}</td>
-  {% if form.data.errors %}
-    <td>{{ form.data.errors }}</td>
+        <td>{{ form.username_or_password }}</td>
+  {% if form.username_or_password.errors %}
+    <td>{{ form.username_or_password.errors }}</td>
   {% endif %}
       </tr>
     </table>
