--- a/src/comicagg/templates/accounts/register.html
+++ b/src/comicagg/templates/accounts/register.html
@@ -6,29 +6,47 @@
 	<h3>{% trans 'Register new account'%}</h3>
 	<p class="info">{% trans 'Please fill in the following fields to create your account. Once you have finished you will be able to log in.'%}</p>
 	<br/>
-	<form method="post" action="{% url 'accounts:register' %}" enctype="application/x-www-form-urlencoded">{% csrf_token %}
-	<table id="register_table">
+	<form method="post" action="{% url 'accounts:register' %}" enctype="application/x-www-form-urlencoded">
+		{% csrf_token %}
+		<table id="register_table">
 		<tr {% if form.username.errors %}class="error_tr"{% endif %}>
-		<td id="username_label"><label>{% trans 'Username'%}</label></td>
-		<td>{{ form.username }}<br/><span class="small_text">{% trans '3 chars min, 30 chars max. The following chars are valid: letters, digits, _ and .'%}</span>{% if form.username.errors %}{{ form.username.errors }}{% endif %}</td>
+			<td id="username_label"><label>{% trans 'Username'%}</label></td>
+			<td>
+				{{ form.username }}<br/><span class="small_text">{% trans 'The following chars are valid: letters, digits, _ and .'%}</span>
+				{% if form.username.errors %}{{ form.username.errors }}{% endif %}
+			</td>
 		</tr>
-		<tr {% if form.password1.errors %}class="error_tr"{% endif %}>
-		<td id="password_label"><label>{% trans 'Password'%}</label></td>
-		<td>{{ form.password1 }}{% if form.password1.errors %}{{ form.password1.errors }}{% endif %}</td>
+		<tr {% if form.password1.errors or form.non_field_errors %}class="error_tr"{% endif %}>
+			<td id="password_label"><label>{% trans 'Password'%}</label></td>
+			<td>{{ form.password1 }}</td>
 		</tr>
-		<tr {% if form.password2.errors %}class="error_tr"{% endif %}>
-		<td id="password2_label"><label>{% trans 'Password again'%}</label></td>
-		<td>{{ form.password2 }}<br/><span class="small_text">{% trans 'Type your password again. Just in case.'%}</span>{% if form.password2.errors %}{{ form.password2.errors }}{% endif %}</td>
+		<tr {% if form.password2.errors or form.non_field_errors %}class="error_tr"{% endif %}>
+			<td id="password2_label"><label>{% trans 'Password again'%}</label></td>
+			<td>
+				{{ form.password2 }}<br/><span class="small_text">{% trans 'Type your password again. Just in case.'%}</span>
+				{% if form.password2.errors %}{{ form.password2.errors }}{% endif %}
+				{% if form.non_field_errors %}{{ form.non_field_errors }}{% endif %}
+			</td>
 		</tr>
 		<tr {% if form.email.errors %}class="error_tr"{% endif %}>
-		<td id="email_label"><label>{% trans 'E-mail'%}</label></td>
-		<td>{{ form.email }}<br/><span class="small_text">{% trans 'Used to recover your password.'%}</span>{% if form.email.errors %}{{ form.email.errors }}{% endif %}</td>
+			<td id="email_label"><label>{% trans 'E-mail'%}</label></td>
+			<td>
+				{{ form.email }}<br/><span class="small_text">{% trans 'Used to recover your password.'%}</span>
+				{% if form.email.errors %}{{ form.email.errors }}{% endif %}
+			</td>
 		</tr>
 		<tr {% if form.captcha.errors %}class="error_tr"{% endif %}>
-		<td id="captcha_label"><label>{% trans 'No Robots!'%}</label></td>
-		<td>{{ form.captcha }}<br/><span class="small_text">{% trans 'Write here the word "comic" (without the quotes).'%}</span>{% if form.captcha.errors %}{{ form.captcha.errors }}{% endif %}</td>
+			<td id="captcha_label"><label>{% trans 'No Robots!'%}</label></td>
+			<td>
+				{{ form.captcha }}<br/><span class="small_text">{% trans 'Write here the word "comic" (without the quotes).'%}</span>
+				{% if form.captcha.errors %}{{ form.captcha.errors }}{% endif %}
+			</td>
 		</tr>
-		<tr><td colspan="2" style="text-align:center;"><input type="submit" value="{% trans 'Create account'%}"/>, <a href="{% url 'index' %}">{% trans 'or go back'%}</a></td></tr>
+		<tr>
+			<td colspan="2" style="text-align:center;">
+				<input type="submit" value="{% trans 'Create account'%}"/>, <a href="{% url 'index' %}">{% trans 'or go back'%}</a>
+			</td>
+		</tr>
 	</table>
 	</form>
 </div>
