Make UpdateEmail logged in required

--- a/src/comicagg/templates/accounts/password_reset_email.html
+++ b/src/comicagg/templates/accounts/password_reset_email.html
@@ -4,9 +4,7 @@
 
 {% blocktrans %}Your new password is: {{ new_password }}{% endblocktrans %}
 
-{% trans "Feel free to change this password by going to this page:" %}
-
-{{ domain }}{% url "accounts:password_change" %}
+{% trans "Feel free to change this password by going to this page:" %} {{ domain }}{% url "accounts:password_change" %}
 
 {% trans "Your username, in case you've forgotten:" %} {{ user.username }}
 
