--- a/src/comicagg/templates/comics/organize_organize.html
+++ b/src/comicagg/templates/comics/organize_organize.html
@@ -9,7 +9,7 @@
 var usercomics = [];
 var usercomics_id = [];
 {% for comic in user_comics %}
-    a = {'id':{{ comic.id}}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':"{{ comic.get_rating|perc:8 }}", 'total_votes':{{ comic.total_votes }}};
+    a = {'id':{{ comic.id}}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':"{{ comic.get_rating|as_percent:8|to_int }}", 'total_votes':{{ comic.total_votes }}};
     usercomics.push(a);
     usercomics_id[{{ comic.id }}] = a;
 {% endfor %}
