--- a/src/comicagg/templates/admin/custom_func.html
+++ b/src/comicagg/templates/admin/custom_func.html
@@ -19,34 +19,34 @@ code {
 {% block content %}
   <div id="content-main">
     <p>
-      La función custom debe crear objetos ComicHistory y añadirlos a la lista <i>history_set</i>. Esto es lo único que debe hacer. Para ello se dispone del objeto del comic en la variable <i>comic</i>. Los objetos ComicHistory se crean y añaden así:<pre>h = ComicHistory(comic, url, alt_text) history_set.append(h)</pre>
+      La función custom debe crear objetos ComicHistory y añadirlos a la lista <i>history_set</i>. Esto es lo único que debe hacer. Para ello se dispone del objeto del comic en la variable <i>comic</i>. Los objetos ComicHistory se crean y añaden así:<pre>h = ComicHistory(comic, url, alt_text)<br/>history_set.append(h)</pre>
     </p>
     <p>Cuando se usa la función personalizada el resto de campos (re1_url, re1_base, re1_re, re1_backwards, re2_url, re2_base, re2_re y re2_backwards) dejan de tener sentido y se pueden usar para guardar lo que haga falta en ellos.</p>
     <p>Se disponen de varias funciones para ayudar:</p>
     <ul>
       <li>
-        <code>list open_url(url)</code>: abre una url y devuelve una lista con las líneas de la misma.
+        <code>_download_url(url: str) -> list[str]</code>: descarga el contenido de la url y devuelve una lista con las líneas de la misma.
       </li>
       <li>
-        <code>(MatchObject, lineas) match_lines(comic, lineas, regexp, backwards)</code>: busca en <i>lineas</i> la primera ocurrencia de <i>regexp</i>. Devuelve una tupla con el objeto de la coincidencia y las líneas restantes.
+        <code>_find_match(comic: Comic, lineas: list[str], regexp: str, backwards: bool) -> (MatchObject, lineas)</code>: busca en <i>lineas</i> la primera ocurrencia de <i>regexp</i>. Devuelve una tupla con el objeto de la coincidencia y las líneas restantes.
       </li>
       <li>
-        <code>string geturl(MatchObject)</code>: devuelve la url de una coincidencia.
+        <code>_url_from_match(MatchObject: re.Match) -> str</code>: devuelve la url de una coincidencia.
       </li>
       <li>
-        <code>string getalt(MatchObject)</code>: devuelve el texto alternativo de una coincidencia.
+        <code>_alt_from_match(MatchObject: re.Match) -> str</code>: devuelve el texto alternativo de una coincidencia.
       </li>
       <li>
-        <code>(string, alt) getredirect(comic, url)</code>: devuelve la url de la primera imagen y el texto alternativo. Los campos normales del comic deben ser correctos.
+        <code>getredirect(comic: Comic, url: str) -> (url: str, alt: str)</code>: devuelve la url de la primera imagen y el texto alternativo. Los campos normales del comic deben ser correctos.
       </li>
       <li>
-        <code>string getredirect(comic)</code>: devuelve la url donde buscar la imagen del comic. Los campos de redirección del comic deben ser correctos.
+        <code>_get_redirected_url(comic: Comic) -> str</code>: devuelve la url donde buscar la imagen del comic. Los campos de redirección del comic deben ser correctos.
       </li>
     </ul>
     <p>Además se pueden usar una de estas funciones que hacen cosas más complejas (se escriben tal y como están en el campo de la función):</p>
     <ul>
       <li>
-        <code>severalinpage(comic, history_set)</code>: busca varias imagenes en la misma página. Los campos re1_url, re1_base y re1_re del comic deben estar rellenos.
+        <code>_get_several_images(comic: Comic, history_set: list[ComicHistory]) -> None</code>: busca varias imagenes en la misma página. Los campos re1_url, re1_base y re1_re del comic deben estar rellenos.
       </li>
     </ul>
     <p>NO hay que:</p>
