--- a/src/comicagg/templates/admin/reported.html
+++ b/src/comicagg/templates/admin/reported.html
@@ -24,7 +24,7 @@
   <div id="content-main">
     {% for id, strip in strips.items %}
       {% if strip %}
-        <a href="/admin/comics/comichistory/{{ strip.id }}/">Comic strip id={{ strip.id }}</a><br />
+        <a href="/admin/comics/strip/{{ strip.id }}/">Comic strip id={{ strip.id }}</a><br />
         <img src="{{ strip.image_url }}" style="width:500px" title="{{ strip.alt_text }}" /><br />
       {% else %}
         Comic strip id={{ id }} no existe
