--- a/src/comicagg/templates/comics/request_index.html
+++ b/src/comicagg/templates/comics/request_index.html
@@ -2,18 +2,21 @@
 {% load i18n comics_tags static %}
 {% block title %}{% trans 'Requests' %} -{% endblock %}
 {% block content %}
-{% regroup user.request_set.all by done as request_list %}
 <div id="request_list" class="box">
     <h4>{% trans "Request a comic" %}</h4>
     <div id="request_new">
-        <p class="info text_left">{% trans "Write the url of the comic you would like to read here and we will try to add it is as soon as possible (if it's possible, of course)."%}</p>
-        {% if count %}<p class="info text_left">{% blocktrans %}Currently there are {{ count }} requests waiting to be added. We have to add them one by one by hand so, please, be patient. Thanks!{% endblocktrans %}</p>{% endif %}
+        <p class="info text_left">
+            {% trans "Write the url of the comic you would like to read here and we will try to add it is as soon as possible (if it's possible, of course)."%}
+        </p>
+        {% if count %}<p class="info text_left">
+            {% blocktrans %}Currently there are {{ count }} requests waiting to be added. We have to add them one by one by hand so, please, be patient. Thanks!{% endblocktrans %}
+        </p>{% endif %}
         <form action="{% url 'comics:requests' %}" method="post">
             {% csrf_token %}
             <div class="form_div {% if form.url.errors %}error_tr{% endif %}">
-              <label>{% trans "The comic's Url"%}</label><br/>
-              {% if form.url.errors %}{{ form.url.errors }}{% endif %}
-              {{ form.url }}
+                <label>{% trans "The comic's Url"%}</label><br/>
+                {% if form.url.errors %}{{ form.url.errors }}{% endif %}
+                {{ form.url }}
             </div>
             <div class="form_div"><label>{% trans 'Any comment?'%}</label><br/>{{ form.comment }}</div>
             <div class="form_div"><input type="submit" value="{% trans 'Send'%}"/></div>
