--- a/src/comicagg/templates/comics/add.html
+++ b/src/comicagg/templates/comics/add.html
@@ -7,15 +7,15 @@
 		<script type="text/javascript">
 var availablecomics = [
 {% for comic in all_comics %}
-{'id':{{ comic.id}}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':"{{ comic.get_rating|as_percent:2|to_int }}", 'total_votes':{{ comic.total_votes }}, 'no_images':{{ comic.no_images|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_update|date:"j F, Y" }}", 'readers':{{ comic.reader_count }}, 'last':"{{ comic.last_image_url|safe }}"},{% endfor %}
+{'id':{{ comic.id }}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':"{{ comic.get_rating|as_percent:2|to_int }}", 'total_votes':{{ comic.total_votes }}, 'no_images':{{ comic.no_images|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_update|date:"j F, Y" }}", 'readers':{{ comic.reader_count }}, 'last':"{{ comic.last_image_url|safe }}", "active":{{ comic.status|equals:"1"|lower }}, "ended":{{ comic.status|equals:"2"|lower }}, "broken":{{ comic.status|equals:"3"|lower }}},{% endfor %}
 ];
 var availablecomics_new = [
 {% for comic in new_comics %}
-{'id':{{ comic.id}}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':"{{ comic.get_rating|as_percent:2|to_int }}", 'total_votes':{{ comic.total_votes }}, 'no_images':{{ comic.no_images|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_update|date:"j F, Y" }}", 'readers':{{ comic.reader_count }}, 'last':"{{ comic.last_image_url|safe }}"},{% endfor %}
+{'id':{{ comic.id }}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':"{{ comic.get_rating|as_percent:2|to_int }}", 'total_votes':{{ comic.total_votes }}, 'no_images':{{ comic.no_images|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_update|date:"j F, Y" }}", 'readers':{{ comic.reader_count }}, 'last':"{{ comic.last_image_url|safe }}"},{% endfor %}
 ];
 var usercomics = [
 {% for comic in user_comics %}
-{'id':{{ comic.id}}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':"{{ comic.get_rating|as_percent:2|to_int }}", 'total_votes':{{ comic.total_votes }}, 'no_images':{{ comic.no_images|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_update|date:"j F, Y" }}", 'readers':{{ comic.reader_count }}, 'last':"{{ comic.last_image_url|safe}}"},{% endfor %}
+{'id':{{ comic.id }}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':"{{ comic.get_rating|as_percent:2|to_int }}", 'total_votes':{{ comic.total_votes }}, 'no_images':{{ comic.no_images|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_update|date:"j F, Y" }}", 'readers':{{ comic.reader_count }}, 'last':"{{ comic.last_image_url|safe}}"},{% endfor %}
 ];
 dojo.addOnLoad(initAdd);
 		</script>
@@ -31,6 +31,8 @@ dojo.addOnLoad(initAdd);
             <div id="comic_info_wrap" style="display:none">
                 <h3 id="comic_name"></h3>
                 <h4 id="comic_new">{% trans "New comic!" %}</h4>
+                <h4 id="comic_broken">{% trans "This comic is broken :( We're working on getting it working!" %}</h4>
+                <h4 id="comic_ended">{% trans "This comic has ended!" %}</h4>
                 <p>{% trans "Score" %}: <b><span id="comic_score">{{ comic.get_rating }}</span>%</b> (<span id="comic_votes">{{ comic.total_votes }}</span> {% trans "votes" %}, <span id="comic_readers">{{ comic.reader_count }}</span> {% trans "readers" %}).</p>
                 <p><a id="comic_url">{% trans "Link to its website"%}</a></p>
                 <p id="comic_image">
