--- a/src/comicagg/templates/comics/add.html
+++ b/src/comicagg/templates/comics/add.html
@@ -7,15 +7,15 @@
 		<script type="text/javascript">
 var availablecomics = [
 {% for comic in all_comics %}
-{'id':{{ comic.id }}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':"{{ comic.get_rating|as_percent:2|to_int }}", 'total_votes':{{ comic.total_votes }}, 'no_images':{{ comic.no_images|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_update|date:"j F, Y" }}", 'readers':{{ comic.reader_count }}, 'last':"{{ comic.last_image_url|safe }}", "active":{{ comic.status|equals:"1"|lower }}, "ended":{{ comic.status|equals:"2"|lower }}, "broken":{{ comic.status|equals:"3"|lower }}},{% endfor %}
+{'id':{{ comic.id }}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':"{{ comic.get_rating|as_percent:2|to_int }}", 'total_votes':{{ comic.total_votes }}, 'no_images':{{ comic.no_images|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_update|date:"j F, Y" }}", 'readers':{{ comic.reader_count }}, 'last':"{{ comic.last_image_url }}", "active":{{ comic.status|equals:"1"|lower }}, "ended":{{ comic.status|equals:"2"|lower }}, "broken":{{ comic.status|equals:"3"|lower }}},{% endfor %}
 ];
 var availablecomics_new = [
 {% for comic in new_comics %}
-{'id':{{ comic.id }}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':"{{ comic.get_rating|as_percent:2|to_int }}", 'total_votes':{{ comic.total_votes }}, 'no_images':{{ comic.no_images|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_update|date:"j F, Y" }}", 'readers':{{ comic.reader_count }}, 'last':"{{ comic.last_image_url|safe }}"},{% endfor %}
+{'id':{{ comic.id }}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':"{{ comic.get_rating|as_percent:2|to_int }}", 'total_votes':{{ comic.total_votes }}, 'no_images':{{ comic.no_images|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_update|date:"j F, Y" }}", 'readers':{{ comic.reader_count }}, 'last':"{{ comic.last_image_url }}"},{% endfor %}
 ];
 var usercomics = [
 {% for comic in user_comics %}
-{'id':{{ comic.id }}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':"{{ comic.get_rating|as_percent:2|to_int }}", 'total_votes':{{ comic.total_votes }}, 'no_images':{{ comic.no_images|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_update|date:"j F, Y" }}", 'readers':{{ comic.reader_count }}, 'last':"{{ comic.last_image_url|safe}}"},{% endfor %}
+{'id':{{ comic.id }}, 'name':"{{ comic.name|escape }}", 'slug':"{{ comic.name|slugify }}", 'score':"{{ comic.get_rating|as_percent:2|to_int }}", 'total_votes':{{ comic.total_votes }}, 'no_images':{{ comic.no_images|lower }}, 'url': "{{ comic.website }}", 'updated':"{{ comic.last_update|date:"j F, Y" }}", 'readers':{{ comic.reader_count }}, 'last':"{{ comic.last_image_url}}"},{% endfor %}
 ];
 dojo.addOnLoad(initAdd);
 		</script>
