--- a/src/comicagg/templates/base.html
+++ b/src/comicagg/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 {% load i18n static %}
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="{{ LANGUAGE_CODE }}">
 	<head>
         <!--
         Welcome to...
@@ -41,8 +41,8 @@
             var url_save_selection = '{% url 'comics:ajax:save' %}';
             var unreadCounter = {{ unread_count }};
             var comicCounter = {{ comic_count }};
-            var newComicCounter = {{ newcomic_count }};			
-            var newsCounter = {{ news_count }};     
+            var newComicCounter = {{ newcomic_count }};
+            var newsCounter = {{ news_count }};
 			{% endif %}
 		</script>
 {% block extra_head %}{% endblock %}
@@ -52,14 +52,14 @@
 			{% if user.is_superuser or not MAINTENANCE %}
 			{% if user.is_authenticated %}
 			<div id="head_right">
-				<a href="{% url 'accounts:profile' %}"><i><b>{{ user.username }}</b></i></a>&nbsp;&nbsp;-&nbsp;&nbsp;<span class=""><a href="{% url 'news:index' %}">{% trans "news" %}<span id="menuNewsCounter">{% if news_count %} ({{ news_count}}){% endif %}</a></span>&nbsp;&nbsp;{% if user.is_staff %}<span class=""><a href="/admin/">{% trans "admin" %}</a></span>&nbsp;&nbsp;{% endif %}<span class=""><a href="{% url 'contact' %}">{% trans "contact" %}</a></span>&nbsp;&nbsp;<span class=""><a href="{% url 'accounts:logout' %}">{% trans "logout" %}</a></span>
+				<a href="{% url 'accounts:profile' %}"><i><b>{{ user.username }}</b></i></a>&nbsp;&nbsp;-&nbsp;&nbsp;<span class=""><a href="{% url 'news:index' %}">{% trans "news" %}<span id="menuNewsCounter">{% if news_count %} ({{ news_count}}){% endif %}</a></span>&nbsp;&nbsp;{% if user.is_staff %}<span class=""><a href="/admin/">{% trans "admin" %}</a></span>&nbsp;&nbsp;{% endif %}<span class=""><a href="{% url 'about:index' %}">{% trans "about" %}</a></span>&nbsp;&nbsp;<span class=""><a href="{% url 'accounts:logout' %}">{% trans "logout" %}</a></span>
 			</div>
 			<div id="head_left">
 				Comics:&nbsp;&nbsp;<span class=""><a href="{% url 'comics:read' %}">{% trans "read" %}<span id="menuUnreadCounter">{% if unread_count %} ({{ unread_count}}){% endif %}</span></a></span>&nbsp;&nbsp;<a href="{% url 'comics:add' %}">{% trans "choose" %}<span id="menuNewComicCounter">{% if newcomic_count %} ({{ newcomic_count}}){% endif %}</span></a></span>&nbsp;&nbsp;<span class=""><a href="{% url 'comics:organize' %}">{% trans "organize" %}</a>&nbsp;&nbsp;<span class=""><a href="{% url 'comics:requests' %}">{% trans "request" %}</a></span>
 			</div>
 			{% else %}
       <div id="head_right">
-        <span class=""><a href="{% url 'news:index' %}">{% trans "news" %}</a></span>&nbsp;&nbsp;<span class=""><a href="{% url 'contact' %}">{% trans "contact" %}</a></span>&nbsp;&nbsp;<span class=""><a href="{% url 'accounts:login' %}">{% trans "login" %}</a></span>
+        <span class=""><a href="{% url 'news:index' %}">{% trans "news" %}</a></span>&nbsp;&nbsp;<span class=""><a href="{% url 'about:index' %}">{% trans "about" %}</a></span>&nbsp;&nbsp;<span class=""><a href="{% url 'accounts:login' %}">{% trans "login" %}</a></span>
       </div>
       <div id="head_left">&nbsp;</div>
 			{% endif %}
