--- a/src/comicagg/templates/accounts/login_form.html
+++ b/src/comicagg/templates/accounts/login_form.html
@@ -35,7 +35,7 @@
         <p>{% trans "Can't remember your password?" %} <a href="{% url 'accounts:password_reset' %}">{% trans 'Send me a new password'%}</a></p>
 </div>
 {% else %}
-<p class="loginbox">{% trans "Comic Aggregator allows you to read lots and lots of webcomics in the same page." %}</p>
+<p class="loginbox">{% trans "Welcome to Comic Aggregator!" %}</p>
 <div id="login_wrap" class="loginbox">
 	<h3>{% trans 'Login into your account'%}</h3>
 	<p>{% trans 'Write your username and passwod to get you logged in.'%}</p>
