--- a/src/comicagg/templates/blog/base.html
+++ b/src/comicagg/templates/blog/base.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% block title %}{% trans 'News' %} - {% endblock %}
 {% block content %}
-<div id="blog_wrapper" class="box">
+<div id="blog_wrapper" class="br mc w90">
     {% include "blog/side.html" %}
     <div id="blog">
     {% block blog_content %}
